# askademic

./: .env-template  .env1  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pull_request_template.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-package.yml
evals/: eval_allower.py  evals.py  evals_allower.py  evals_article.py  evals_general.py  evals_orchestrator.py  evals_question.py  evals_summary.py  orchestrator_dataset.yaml  orchestrator_evals.py  question_evals.py  questions_dataset.yaml
src/arxiv_muse/: agents.py  main.py  tools.py
src/askademic/: __init__.py  agents.py  allower.py  article.py  constants.py  general.py  local_testing.py  main.py  memory.py  orchestrator.py  prompts.py  question.py  summarizer.py  summary.py  tools.py  utils.py
src/askademic/prompts/: claude.py  gemini.py  general.py
tests/: test_article.py  test_article_cache.py  test_main.py  test_memory.py  test_question.py  test_summarizer.py  test_tools.py
