[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "askademic"
version = "1.0.1-b"
dependencies = [
  "pydantic==2.10.6",
  "pydantic-ai==0.1.10",
  "requests==2.32.3",
  "pandas==2.2.3",
  "tabulate==0.9.0",
  "pymupdf==1.25.3",
  "feedparser==6.0.11",
  "asyncio==3.4.3",
  "nest-asyncio==1.6.0",
  "rich==13.9.4",
  "pytest==8.3.5",
  "pytest_asyncio==0.26.0",
  "pre-commit==4.2.0"
]
requires-python = ">=3.11"

classifiers = [
  "Development Status :: 1.0",
  "Programming Language :: Python :: 3"
]

[tool.setuptools]
packages = ["askademic"]
package-dir = { "" = "src" }

[project.scripts]
askademic = "askademic.main:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
